@@ -142,8 +142,7 @@ public class FhirResourceHandlerImpl implements FhirResourceHandler, Initializin
 		Bundle batchBundle = new Bundle();
 		batchBundle.setType(BundleType.BATCH);
 
-		List<BundleEntryComponent> entries = resourceValues.stream()
-				.map(r -> r.toBundleEntry(localWebserviceClient.getBaseUrl())).collect(Collectors.toList());
+		List<BundleEntryComponent> entries = resourceValues.stream().map(ProcessesResource::toBundleEntry).toList();
 		batchBundle.setEntry(entries);
 
 		try
@@ -167,17 +166,23 @@ public class FhirResourceHandlerImpl implements FhirResourceHandler, Initializin
 				}
 				catch (SQLException e)
 				{
-					logger.error("Error while adding process plugin resource to the db", e);
+					logger.debug("Error while adding process plugin resource to the db", e);
+					logger.warn("Error while adding process plugin resource to the db: {} - {}", e.getClass().getName(),
+							e.getMessage());
+
 					throw new RuntimeException(e);
 				}
 			}
 		}
 		catch (Exception e)
 		{
-			logger.warn("Error while executing process plugins resource bundle: {}", e.getMessage());
+			logger.debug("Error while executing process plugins resource bundle", e);
+			logger.warn("Error while executing process plugins resource bundle: {} - {}", e.getClass().getName(),
+					e.getMessage());
 			logger.warn(
 					"Resources in FHIR server may not be consistent, please check resources and execute the following bundle if necessary: {}",
 					fhirContext.newJsonParser().encodeResourceToString(batchBundle));
+
 			throw e;
 		}
 	}
@@ -261,8 +266,8 @@ public class FhirResourceHandlerImpl implements FhirResourceHandler, Initializin
 				logger.warn("Response status for {} not 200 OK but {}, missing resource will not be added",
 						resource.getSearchBundleEntryUrl(), entry.getResponse().getStatus());
 			}
-			else if (!entry.hasResource() || !(entry.getResource() instanceof Bundle)
-					|| !(BundleType.SEARCHSET.equals(((Bundle) entry.getResource()).getType())))
+			else if (!entry.hasResource() || !(entry.getResource() instanceof Bundle b)
+					|| !BundleType.SEARCHSET.equals(b.getType()))
 			{
 				logger.warn("Response for {} not a searchset Bundle, missing resource will not be added",
 						resource.getSearchBundleEntryUrl());
@@ -389,7 +394,10 @@ public class FhirResourceHandlerImpl implements FhirResourceHandler, Initializin
 		}
 		catch (SQLException e)
 		{
-			logger.warn("Error while retrieving resource infos from db", e);
+			logger.debug("Error while retrieving resource infos from db", e);
+			logger.warn("Error while retrieving resource infos from db: {} - {}", e.getClass().getName(),
+					e.getMessage());
+
 			throw new RuntimeException(e);
 		}
 	}
