@@ -2,7 +2,6 @@ package dev.dsf.fhir.help;
 
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -34,10 +33,10 @@ public class ParameterConverter
 
 	public static final String HTML_FORMAT = "html";
 	public static final String JSON_FORMAT = "json";
-	public static final List<String> JSON_FORMATS = Arrays.asList(Constants.CT_FHIR_JSON, Constants.CT_FHIR_JSON_NEW,
+	public static final List<String> JSON_FORMATS = List.of(Constants.CT_FHIR_JSON, Constants.CT_FHIR_JSON_NEW,
 			MediaType.APPLICATION_JSON);
 	public static final String XML_FORMAT = "xml";
-	public static final List<String> XML_FORMATS = Arrays.asList(Constants.CT_FHIR_XML, Constants.CT_FHIR_XML_NEW,
+	public static final List<String> XML_FORMATS = List.of(Constants.CT_FHIR_XML, Constants.CT_FHIR_XML_NEW,
 			MediaType.APPLICATION_XML, MediaType.TEXT_XML);
 
 	private final ExceptionHandler exceptionHandler;
@@ -234,12 +233,15 @@ public class ParameterConverter
 			else
 			{
 				logger.warn("{} not a weak ETag", eTag.getValue());
+
 				return Optional.empty();
 			}
 		}
 		catch (IllegalArgumentException e)
 		{
-			logger.warn("Unable to parse ETag value", e);
+			logger.debug("Unable to parse ETag value", e);
+			logger.warn("Unable to parse ETag value: {} - {}", e.getClass().getName(), e.getMessage());
+
 			return Optional.empty();
 		}
 	}
@@ -275,7 +277,9 @@ public class ParameterConverter
 		}
 		catch (NumberFormatException e)
 		{
-			logger.warn("Version not a Long value", e);
+			logger.debug("Version not a Long value", e);
+			logger.warn("Version not a Long value: {} - {}", e.getClass().getName(), e.getMessage());
+
 			return Optional.empty();
 		}
 	}
